brat/test/golden/error/vecpat2.brat.golden
Error in test/golden/error/vecpat2.brat@3:5
fst3(some(x)) = none
    ^^^^^^^^^

  "some" is not a valid constructor for type Vec

